[workspace]
members = ["day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11"]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
hashbrown = "0.15.2"
rustc-hash = "2.1.0"
