[workspace]
members = ["day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11", "day12", "day13", "day14", "day15", "day16", "day17", "day18", "day19"]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.93"
arrayvec = "0.7.6"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
hashbrown = "0.15.2"
regex = "1.11.1"
